Reduce margin in sidebar

--- a/css/area_main-sidebar-nav.less
+++ b/css/area_main-sidebar-nav.less
@@ -257,14 +257,14 @@
     div.nav-panel {
         display: none;
         margin-top: .5rem;
-        margin-left: @menu-margin;
+        margin-left: .5rem;
 
         ul {
             margin-bottom: 1rem;
 
             ul {
                 margin-bottom: 0;
-                margin-left: 16px;
+                margin-left: 0;
             }
         }
     }
