Modify the section edit button

--- a/css/area_main-content-secedit.less
+++ b/css/area_main-content-secedit.less
@@ -7,7 +7,7 @@
         position: relative;
         top: 0;
         float: right;
-        margin-top: 0; // for best position of edit-tab beneath table
+        margin-top: -1em; // for best position of edit-tab beneath table
 
         form div.no {
             button {
