--- a/css/area_content.less
+++ b/css/area_content.less
@@ -47,6 +47,15 @@
     }
 }
 
+.main-content li.level2,
+.main-content li.level3,
+.main-content li.level4,
+.main-content li.level5,
+.main-content li.level6 {
+    margin-top: 0.3rem !important;
+}
+
+
 .level1,
 .level2,
 .level3,
